--- a/app/src/main/res/layout/view_group_custom_flip_card.xml
+++ b/app/src/main/res/layout/view_group_custom_flip_card.xml
@@ -54,8 +54,8 @@
 
     <ImageView
         android:id="@+id/ivFirstCardBackground"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="97dp"
+        android:layout_height="98dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="10dp"
@@ -66,8 +66,8 @@
 
     <ImageView
         android:id="@+id/ivFirstCard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="97dp"
+        android:layout_height="98dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="10dp"
@@ -78,8 +78,8 @@
 
     <ImageView
         android:id="@+id/ivSecondCardBackground"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="97dp"
+        android:layout_height="98dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/card1"
@@ -89,8 +89,8 @@
 
     <ImageView
         android:id="@+id/ivSecondCard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="97dp"
+        android:layout_height="98dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:transitionName="transition_image"
@@ -100,8 +100,8 @@
 
     <ImageView
         android:id="@+id/ivThirdCardBackground"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="97dp"
+        android:layout_height="98dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/card1"
@@ -111,8 +111,8 @@
 
     <ImageView
         android:id="@+id/ivThirdCard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="97dp"
+        android:layout_height="98dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:transitionName="transition_image"
