--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#cccccc</color>
+    <color name="gray_C4C4C4">#C4C4C4</color>
     <color name="blue">#0000ff</color>
+    <color name="blue_3399ff">#3399ff</color>
     <color name="red">#ff0000</color>
     <color name="gray_200">#f4f4f4</color>
     <color name="ea5858">#ea5858</color>
