--- a/app/src/main/res/drawable/shape_recharge_tab_rectangle.xml
+++ b/app/src/main/res/drawable/shape_recharge_tab_rectangle.xml
@@ -2,7 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:width="85dp" android:height="90dp">
         <shape android:shape="rectangle">
-            <corners android:radius="7dp" />
+            <corners
+                android:topLeftRadius="7dp"
+            android:topRightRadius="7dp"/>
             <solid android:color="#ffffff" />
         </shape>
     </item>
