--- a/app/src/main/res/layout/activity_recharge_page.xml
+++ b/app/src/main/res/layout/activity_recharge_page.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray_200"
-    >
+    android:background="@color/gray_200">
 
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
+        app:layout_constraintTop_toBottomOf="@id/viewBar">
 
         <com.scwang.smart.refresh.header.ClassicsHeader
             android:layout_width="match_parent"
@@ -32,14 +31,6 @@
                 android:paddingRight="13dp"
                 tools:ignore="ExtraText">
 
-                <View
-                    android:id="@+id/viewTop"
-                    android:layout_width="match_parent"
-                    android:layout_height="39dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toLeftOf="@id/tvRechargeResult"
-                    app:layout_constraintTop_toTopOf="parent" />
-
                 <!-- 在这里添加你的约束布局内容 -->
                 <ImageView
                     android:id="@+id/ivTick"
@@ -50,7 +41,7 @@
                     app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/tvRechargeResult"
-                    app:layout_constraintTop_toBottomOf="@id/viewTop" />
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
                     android:id="@+id/tvRechargeResult"
@@ -63,7 +54,7 @@
                     android:textStyle="bold"
                     app:layout_constraintLeft_toRightOf="@id/ivTick"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/viewTop" />
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
                     android:id="@+id/tvRechargeNumber"
@@ -194,7 +185,7 @@
                         app:layout_constraintRight_toLeftOf="@id/tvScrollBackground"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <com.example.myapplication.recharge.widget.ScrrollTextViewBackground
+                    <com.example.myapplication.recharge.widget.ScrollTextViewBackground
                         android:id="@+id/tvScrollBackground"
                         android:layout_width="52dp"
                         android:layout_height="22dp"
@@ -398,9 +389,9 @@
                         android:text="去开启"
                         android:textColor="#5b82ff"
                         android:textSize="13sp"
+                        app:layout_constraintBottom_toBottomOf="@id/ivAutoRecharge"
                         app:layout_constraintLeft_toRightOf="@id/ivAutoRecharge"
-                        app:layout_constraintTop_toTopOf="@id/ivAutoRecharge"
-                        app:layout_constraintBottom_toBottomOf="@id/ivAutoRecharge"/>
+                        app:layout_constraintTop_toTopOf="@id/ivAutoRecharge" />
 
                     <View
                         android:id="@+id/viewLine"
@@ -476,9 +467,9 @@
                         android:text="去看看"
                         android:textColor="#5b82ff"
                         android:textSize="13sp"
+                        app:layout_constraintBottom_toBottomOf="@id/ivWatchVideo"
                         app:layout_constraintLeft_toRightOf="@id/ivWatchVideo"
-                        app:layout_constraintTop_toTopOf="@id/ivWatchVideo"
-                        app:layout_constraintBottom_toBottomOf="@id/ivWatchVideo"/>
+                        app:layout_constraintTop_toTopOf="@id/ivWatchVideo" />
 
                     <View
                         android:id="@+id/viewLine2"
@@ -596,7 +587,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:orientation="vertical"
-                    app:layout_constraintBottom_toTopOf="@id/viewBottom"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/rechargeScratchCard">
 
@@ -625,17 +616,17 @@
                         android:layout_weight="1"
                         android:orientation="horizontal"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+                        app:layout_constraintTop_toBottomOf="@id/tabLayout"
+                        />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <View
+               <!-- <View
                     android:id="@+id/viewBottom"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/llWaterfall" />
-                -->
+                    app:layout_constraintTop_toBottomOf="@id/llWaterfall" />-->
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
@@ -643,6 +634,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+
+     <View
+                    android:id="@+id/viewBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+         app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/refreshLayout" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
