--- a/app/src/main/res/layout/widget_multiple_item_recharge.xml
+++ b/app/src/main/res/layout/widget_multiple_item_recharge.xml
@@ -20,31 +20,32 @@
         android:textColor="#333333"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/ll"
+        app:layout_constraintBottom_toTopOf="@id/et_phone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/rlRecharge"
-        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/et_phone"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content" />
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintTop_toBottomOf="@id/tvTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/rlRecharge"/>
 
         <ImageView
             android:id="@+id/btn_select"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/beans"
+            app:layout_constraintTop_toTopOf="@id/et_phone"
+            app:layout_constraintBottom_toBottomOf="@id/et_phone"
+            app:layout_constraintLeft_toRightOf="@id/et_phone"
             />
-    </LinearLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rlRecharge"
@@ -56,6 +57,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll"/>
+        app:layout_constraintTop_toBottomOf="@id/et_phone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
