--- a/app/src/main/res/layout/activity_recharge_page.xml
+++ b/app/src/main/res/layout/activity_recharge_page.xml
@@ -612,21 +612,13 @@
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/viewPager2"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:orientation="horizontal"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tabLayout"
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
-               <!-- <View
-                    android:id="@+id/viewBottom"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/llWaterfall" />-->
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
