--- a/app/src/main/res/layout/view_custom_recharge_waterfall_tab.xml
+++ b/app/src/main/res/layout/view_custom_recharge_waterfall_tab.xml
@@ -8,9 +8,10 @@
 
     <ImageView
         android:id="@+id/tabIcon"
-        android:layout_width="45dp"
-        android:layout_height="14dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toTopOf="@id/tabName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
