--- a/app/src/main/res/layout/widget_multiple_item_recharge.xml
+++ b/app/src/main/res/layout/widget_multiple_item_recharge.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textSize="18dp"
+            android:textColor="#333333"
             android:layout_marginLeft="10dp"
             app:layout_constraintTop_toBottomOf="@id/tvTitle"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -40,7 +41,7 @@
             android:id="@+id/btn_select"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/beans"
+            android:src="@drawable/phone"
             app:layout_constraintTop_toTopOf="@id/et_phone"
             app:layout_constraintBottom_toBottomOf="@id/et_phone"
             app:layout_constraintLeft_toRightOf="@id/et_phone"
