--- a/app/src/main/res/layout/widget_multiple_item_common.xml
+++ b/app/src/main/res/layout/widget_multiple_item_common.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
@@ -32,11 +31,11 @@
         android:background="@drawable/shape_recharge_commentlist"
         android:gravity="center"
         android:paddingLeft="5dp"
-        android:visibility="gone"
         android:paddingRight="5dp"
         android:text="无货"
         android:textColor="#fff8f6"
         android:textSize="11sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/ivPicAreaImageUrl"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -48,7 +47,7 @@
         android:layout_marginBottom="5dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="无货"
+        android:text="操作简单"
         android:textColor="#fff8f6"
         android:textSize="11sp"
         android:visibility="gone"
@@ -59,9 +58,7 @@
         android:id="@+id/rvContentAreaList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-
+        app:layout_constraintTop_toBottomOf="@id/ivPicAreaImageUrl" />
 </androidx.constraintlayout.widget.ConstraintLayout>
