--- a/app/src/main/res/layout/activity_banner.xml
+++ b/app/src/main/res/layout/activity_banner.xml
@@ -6,6 +6,7 @@
     android:layout_marginLeft="5dp"
     android:layout_marginRight="4dp"
     android:layout_marginBottom="10dp"
+    android:id="@+id/clBanner"
     android:background="@drawable/shape_rectangle19">
 
 
