--- a/app/src/main/res/layout/view_custom_recharge_waterfall_tab.xml
+++ b/app/src/main/res/layout/view_custom_recharge_waterfall_tab.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/tabIcon"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         app:layout_constraintBottom_toTopOf="@id/tabName"
