--- a/app/src/main/res/layout/view_group_custom_flip_card.xml
+++ b/app/src/main/res/layout/view_group_custom_flip_card.xml
@@ -55,11 +55,12 @@
     <ImageView
         android:id="@+id/ivFirstCardBackground"
         android:layout_width="97dp"
-        android:layout_height="98dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="10dp"
         android:src="@drawable/card1"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvFlipCard" />
@@ -67,10 +68,11 @@
     <ImageView
         android:id="@+id/ivFirstCard"
         android:layout_width="97dp"
-        android:layout_height="98dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="10dp"
+        app:layout_constraintDimensionRatio="1:1"
         android:transitionName="transition_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -79,10 +81,11 @@
     <ImageView
         android:id="@+id/ivSecondCardBackground"
         android:layout_width="97dp"
-        android:layout_height="98dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/card1"
+        app:layout_constraintDimensionRatio="1:1"
         android:transitionName="transition_image"
         app:layout_constraintLeft_toRightOf="@id/ivFirstCard"
         app:layout_constraintTop_toBottomOf="@id/tvFlipCard" />
@@ -90,9 +93,10 @@
     <ImageView
         android:id="@+id/ivSecondCard"
         android:layout_width="97dp"
-        android:layout_height="98dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintDimensionRatio="1:1"
         android:transitionName="transition_image"
         app:layout_constraintLeft_toRightOf="@id/ivFirstCard"
         app:layout_constraintTop_toBottomOf="@id/tvFlipCard" />
@@ -101,10 +105,11 @@
     <ImageView
         android:id="@+id/ivThirdCardBackground"
         android:layout_width="97dp"
-        android:layout_height="98dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/card1"
+        app:layout_constraintDimensionRatio="1:1"
         android:transitionName="transition_image"
         app:layout_constraintLeft_toRightOf="@id/ivSecondCard"
         app:layout_constraintTop_toBottomOf="@id/tvFlipCard" />
@@ -112,10 +117,11 @@
     <ImageView
         android:id="@+id/ivThirdCard"
         android:layout_width="97dp"
-        android:layout_height="98dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:transitionName="transition_image"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toRightOf="@id/ivSecondCard"
         app:layout_constraintTop_toBottomOf="@id/tvFlipCard" />
 
