--- a/app/src/main/res/layout/view_custom_recharge_waterfall_tab.xml
+++ b/app/src/main/res/layout/view_custom_recharge_waterfall_tab.xml
@@ -8,10 +8,11 @@
 
     <ImageView
         android:id="@+id/tabIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:scaleType="fitCenter"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:scaleType="fitXY"
         android:adjustViewBounds="true"
+        app:layout_constraintDimensionRatio="45:14"
         app:layout_constraintBottom_toTopOf="@id/tabName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -21,11 +22,11 @@
     <TextView
         android:id="@+id/tabName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:gravity="start"
         android:text="555"
         android:textColor="#111111"
-        android:textSize="17sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/subTitle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:text="555"
+        android:visibility="gone"
         android:textColor="#111111"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
