--- a/app/src/main/res/layout/activity_recharge_page.xml
+++ b/app/src/main/res/layout/activity_recharge_page.xml
@@ -594,15 +594,17 @@
                     <com.google.android.material.tabs.TabLayout
                         android:id="@+id/tabLayout"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:background="@drawable/shape_recharge_tab_rectangle"
                         android:minHeight="?attr/actionBarSize"
                         android:theme="@style/Theme.AppCompat"
+                        android:paddingBottom="5dp"
                         app:layout_constraintBottom_toTopOf="@id/viewPager2"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:tabIndicator="@drawable/shape_tab_indicator"
+                        app:tabIndicatorGravity="bottom"
                         app:tabIndicatorColor="#1990ff"
                         app:tabPaddingBottom="3dp"
                         app:tabIndicatorFullWidth="false"
