--- a/app/src/main/res/layout/adapter_recharge_many_image_grid.xml
+++ b/app/src/main/res/layout/adapter_recharge_many_image_grid.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/ivImageUrl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
         app:layout_constraintDimensionRatio="1:1"
@@ -16,6 +16,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
