--- a/app/src/main/res/layout/activity_recharge_page.xml
+++ b/app/src/main/res/layout/activity_recharge_page.xml
@@ -595,7 +595,7 @@
                         android:id="@+id/tabLayout"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:background="@drawable/shape_recharge_tab_rectangle"
+                        android:background="@color/gray_200"
                         android:minHeight="?attr/actionBarSize"
                         android:theme="@style/Theme.AppCompat"
                         android:paddingBottom="5dp"
