--- a/app/src/main/res/layout/fragment_recharge_waterfall.xml
+++ b/app/src/main/res/layout/fragment_recharge_waterfall.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -10,10 +11,8 @@
         android:layout_height="40dp"
         android:background="@color/gray_200"
         android:minHeight="?attr/actionBarSize"
-        android:paddingBottom="5dp"
         android:theme="@style/Theme.AppCompat"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_isSticky="true"
         app:tabIndicatorHeight="0dp"
