--- a/app/src/main/res/layout/view_fragment_tab.xml
+++ b/app/src/main/res/layout/view_fragment_tab.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:background="@drawable/shape_rectangle13">
+    android:background="@drawable/shape_fragment_tab">
 
     <ImageView
         android:id="@+id/tabIcon"
         android:layout_width="0dp"
         android:layout_height="11dp"
         android:scaleType="fitXY"
+        android:layout_marginStart="5dp"
         android:adjustViewBounds="true"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,8 +24,10 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:gravity="start"
-        android:text="555"
-        android:textColor="#111111"
+        android:text="快捷功能"
+        android:paddingStart="2dp"
+        android:paddingEnd="6dp"
+        android:textColor="#999999"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/tabIcon"
